src/codegen/snapshots/hebi__codegen__tests__variable_scope_lifetime.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
fn test():
  if true:
    v := 0
    if true:
      print v
      v := 0
      print v
    v := 0
    b := 0
    print b


# Func:
function `test` (registers: 3, length: 37, constants: 4)
.code
  0  | load_true
  1  | jump_if_false 34
  3  | load_smi 0
  5  | store r1
  7  | load_true
  8  | jump_if_false 14
  10 | load r1
  12 | print
  13 | load_smi 0
  15 | store r2
  17 | load r2
  19 | print
  20 | jump 2
  22 | load_smi 0
  24 | store r1
  26 | load_smi 0
  28 | store r2
  30 | load r2
  32 | print
  33 | jump 2
  35 | load_none
  36 | return


function `main` (registers: 1, length: 5, constants: 2)
.code
  0 | make_fn [0]; <function `test` descriptor>
  2 | store_global [1]; test
  4 | return



