src/codegen/snapshots/hebi__codegen__tests__while_continue.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
while true:
  continue


# Func:
function `main` (registers: 1, length: 8, constants: 1)
.code
  0 | load_true
  1 | jump_if_false 6
  3 | jump_loop 3
  5 | jump_loop 5
  7 | return




