src/codegen/snapshots/hebi__codegen__tests__while_nested_while.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
while true:
  while true:
    continue
  continue


# Func:
function `main` (registers: 1, length: 15, constants: 2)
.code
  0  | load_true
  1  | jump_if_false 13
  3  | load_true
  4  | jump_if_false 6
  6  | jump_loop 3
  8  | jump_loop 5
  10 | jump_loop 10
  12 | jump_loop 12
  14 | return




