src/codegen/snapshots/hebi__codegen__tests__while_print.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
while true:
  print "test"


# Func:
function `main` (registers: 1, length: 9, constants: 2)
.code
  0 | load_true
  1 | jump_if_false 7
  3 | load_const [1]; test
  5 | print
  6 | jump_loop 6
  8 | return




